Production/Production/src/objects/SocialPersona.object
<CustomObject>
    <fields>
        <fullName>R6Service__AvatarIconResource__c</fullName>
        <description>Used to populate the avatar, should not be made visible.</description>
        <formula>BLANKVALUE(ExternalPictureURL, &quot;/resource/R6Service__MissingAvatar&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avatar Icon Resource</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R6Service__Avatar__c</fullName>
        <description>User&apos;s profile picture, or a placeholder if no picture is accessible.  This links to the persona&apos;s profile and when clicked will take you to the social media site.  It is similar to the Profile link however only displays the profile picture rather than text.</description>
        <formula>IF(ISBLANK(ExternalPictureURL), IMAGE(R6Service__AvatarIconResource__c, Name, 48, 48), HYPERLINK(ProfileUrl, IMAGE(R6Service__AvatarIconResource__c, Name, 48, 48)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Click here to visit the user&apos;s profile page.</inlineHelpText>
        <label>Avatar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R6Service__Bio__c</fullName>
        <label>Bio</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>R6Service__Followers__c</fullName>
        <label>Followers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R6Service__Following__c</fullName>
        <label>Following</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R6Service__Friends__c</fullName>
        <label>Number Of Friends</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R6Service__Listed__c</fullName>
        <label>Listed Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R6Service__MediaIconResource__c</fullName>
        <description>A formula used by the media icon. Should not be made visible.</description>
        <formula>IF(CONTAINS(UPPER(R6Service__MediaProvider__c),&quot;TWITTER&quot;), &quot;/resource/R6Service__Twitter_Logo&quot;, 
IF(CONTAINS(UPPER(R6Service__MediaProvider__c), &quot;FACEBOOK&quot;), &quot;/resource/R6Service__Facebook_Logo&quot;, 
IF(CONTAINS(UPPER(R6Service__MediaProvider__c), &quot;YOUTUBE&quot;), &quot;/resource/R6Service__MediaTypeYouTubeIcon&quot;, 
CASE(UPPER(MediaType), 
&quot;BLOGS&quot;, &quot;/resource/R6Service__MediaTypeBlogIcon&quot;, 
&quot;VIDEOS&quot;, &quot;/resource/R6Service__MediaTypeVideoIcon&quot;, 
&quot;IMAGES&quot;, &quot;/resource/R6Service__MediaTypeImageIcon&quot;, 
&quot;MAINSTREAM NEWS&quot;, &quot;/resource/R6Service__MediaTypeNewsIcon&quot;, 
&quot;MICROMEDIA&quot;, &quot;/resource/R6Service__MediaTypeMicromediaIcon&quot;, 
&quot;FORUM&quot;, &quot;/resource/R6Service__MediaTypeForumIcon&quot;, 
&quot;COMMENTS&quot;, &quot;/resource/R6Service__MediaTypeCommentIcon&quot;, 
&quot;/resource/R6Service__DefaultChannelLogo&quot; 
))))</formula>
        <label>Media Icon Resource</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R6Service__MediaIcon__c</fullName>
        <description>The icon that represents the post&apos;s medium. This will be the provider&apos;s logo for common providers, or generic media type logos for less popular providers.</description>
        <formula>IMAGE(R6Service__MediaIconResource__c, MediaType +&quot;/&quot; + R6Service__MediaProvider__c, 48, 48)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The media provider or media type.</inlineHelpText>
        <label>Media Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R6Service__MediaProvider__c</fullName>
        <label>Radian6 Media Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R6Service__ProfileType__c</fullName>
        <label>Profile Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R6Service__R6SourceId__c</fullName>
        <label>Radian6 Source Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R6Service__SocialEmails__c</fullName>
        <description>A comma sepparated list of emails from Social Media Accounts related to the Social Persona</description>
        <inlineHelpText>A comma sepparated list of emails from Social Media Accounts related to the Social Persona</inlineHelpText>
        <label>Social Emails</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>R6Service__Tweets__c</fullName>
        <label>Number Of Tweets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>